Saved independent data for each CV.